--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,34 @@
   "framework": null,
   "rewrites": [
     {
+      "source": "/api/profile",
+      "destination": "/api/profile.py"
+    },
+    {
+      "source": "/api/skills",
+      "destination": "/api/skills.py"
+    },
+    {
+      "source": "/api/blog",
+      "destination": "/api/blog.py"
+    },
+    {
+      "source": "/api/resume",
+      "destination": "/api/resume.py"
+    },
+    {
+      "source": "/api/gallery",
+      "destination": "/api/gallery.py"
+    },
+    {
       "source": "/api/(.*)",
       "destination": "/api/index.py"
+    },
+    {
+      "source": "/(.*\\.(js|css|ico|png|jpg|jpeg|svg|pdf|woff|woff2|ttf|eot))",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
     },
     {
       "source": "/(.*)",
