Add test endpoint to verify Vercel Python functions work

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
   "framework": null,
   "rewrites": [
     {
+      "source": "/api/test",
+      "destination": "/api/test.py"
+    },
+    {
       "source": "/api/(.*)",
       "destination": "/api/index.py"
     },
