Fix Vercel serverless function - add runtime config and better error handling

--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,12 @@
   "outputDirectory": "frontend/dist",
   "installCommand": "cd frontend && npm install",
   "framework": null,
+  "functions": {
+    "api/index.py": {
+      "runtime": "python3.9"
+    }
+  },
   "rewrites": [
-    {
-      "source": "/api/test",
-      "destination": "/api/test.py"
-    },
     {
       "source": "/api/(.*)",
       "destination": "/api/index.py"
