Fix Vercel handler - specify runtime and ensure proper handler export

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,11 @@
   "outputDirectory": "frontend/dist",
   "installCommand": "cd frontend && npm install",
   "framework": null,
+  "functions": {
+    "api/*.py": {
+      "runtime": "python3.9"
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
