--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,24 @@
   "framework": null,
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/index.py"
+      "source": "/api/profile",
+      "destination": "/api/profile.py"
+    },
+    {
+      "source": "/api/skills",
+      "destination": "/api/skills.py"
+    },
+    {
+      "source": "/api/blog",
+      "destination": "/api/blog.py"
+    },
+    {
+      "source": "/api/resume",
+      "destination": "/api/resume.py"
+    },
+    {
+      "source": "/api/projects",
+      "destination": "/api/projects.py"
     },
     {
       "source": "/(.*)",
